--- a/presentation/src/main/res/layout/activity_door_list.xml
+++ b/presentation/src/main/res/layout/activity_door_list.xml
@@ -11,7 +11,9 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/root_layout"
-        style="@style/AppConstraintLayout">
+        style="@style/AppConstraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolBar"
@@ -29,7 +31,7 @@
 
         <TextView
             android:id="@+id/message_tv"
-            style="@style/ErrorEditText"
+            style="@style/ErrorTextView"
             android:text="@{viewModel.errorMessage}"
             android:visibility="@{!viewModel.isConnected}"
             app:layout_constraintBottom_toBottomOf="parent"
