--- a/presentation/src/main/res/layout/activity_search.xml
+++ b/presentation/src/main/res/layout/activity_search.xml
@@ -10,6 +10,7 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
+        style="@style/AppConstraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -24,12 +25,12 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginBottom="10dp"
+                android:paddingStart="5dp"
                 android:background="@color/backgroundColor"
                 android:drawableStart="@drawable/ic_search_black_24dp"
                 android:hint="@string/search"
-                android:afterTextChanged="@{(editable) -> viewModel.afterTextChanged(editable)}"
                 android:inputType="text"
-                android:text="@={viewModel.request}" />
+                android:onTextChanged="@{(text, i, i1, i2) -> viewModel.onTextChanged(text)}" />
 
         </android.support.v7.widget.Toolbar>
 
@@ -44,7 +45,7 @@
 
         <TextView
             android:id="@+id/message_tv"
-            style="@style/ErrorEditText"
+            style="@style/ErrorTextView"
             android:text="@{viewModel.errorMessage}"
             android:visibility="@{!viewModel.isConnected}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -99,7 +100,6 @@
                 app:error="@{@drawable/error}"
                 app:imageUrl="@{viewModel.doorUrl}" />
         </FrameLayout>
-
 
     </android.support.constraint.ConstraintLayout>
 
